k8s/dotnetfirst-clusterip.yml
apiVersion: apps/v1
kind: Deployment 

metadata:
  name: dotnet-first-deployment

spec: 
  replicas: 1
  selector: 
   matchLabels:
    component: web
  template :
   metadata:
    labels:
     component: web
   spec:
     containers:
       - name: client
         image: nlrcmani/dotnet-sample-1
         ports:
           - containerPort: 5000
