k8s/dotnetsecond-clusterip.yml
apiVersion: apps/v1
kind: Deployment 

metadata:
  name: dotnet-second-deployment

spec: 
  replicas: 1
  selector: 
   matchLabels:
    component: web
  template :
   metadata:
    labels:
     component: web
   spec:
     containers:
       - name: dotnet
         image: nlrcmani/dotnet-sample-2
         ports:
           - containerPort: 5000
