k8s/dotnetfirst-deployment.yml
apiVersion: v1

kind: Service 

metadata:
  name: dotnet-first-deployment
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 5000
    targetPort: 5000
