k8s/dotnetsecond-deployment.yml
apiVersion: v1

kind: Service 

metadata:
  name: dotnet-second-deployment
spec:

  selector:
    component: web
  ports:
  - port: 5000
