k8s/ingress.yml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
       paths:
         - path: /app1
           backend:
             serviceName: dotnet-first-deployment
             servicePort: 5000
         - path: /app2
           backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
